FEAT: add style colors to nodes and ports
close #12

--- a/Editor/DialogueGraph/Resources/Styles/Nodes/BooleanNode.uss
+++ b/Editor/DialogueGraph/Resources/Styles/Nodes/BooleanNode.uss
@@ -1,3 +1,11 @@
+#title {
+    background-color: #073b4c
+}
+
+#title-label {
+    -unity-font-style: bold;
+}
+
 #title-button-container {
     align-items: center
 }
