--- a/Editor/DialogueGraph/Resources/Styles/Nodes/CheckNode.uss
+++ b/Editor/DialogueGraph/Resources/Styles/Nodes/CheckNode.uss
@@ -1,3 +1,12 @@
+#title {
+    background-color: #06d6a0
+}
+
+#title-label {
+    -unity-font-style: bold;
+    color: #222;
+}
+
 #title-button-container {
     align-items: center
 }
