--- a/Editor/DialogueGraph/Resources/Styles/Nodes/DialogueNode.uss
+++ b/Editor/DialogueGraph/Resources/Styles/Nodes/DialogueNode.uss
@@ -1,3 +1,12 @@
 .node {
     width: 300px;
 }
+
+#title {
+    background-color: #118AB2
+}
+
+#title-label {
+    -unity-font-style: bold;
+    color: #222;
+}
